compiler-tests/src/test/data/diagnostic/provides/GraphPrivateOnNonProvideIsAnError.kt
// RENDER_DIAGNOSTICS_FULL_TEXT
@DependencyGraph
interface ExampleGraph {
  @GraphPrivate fun <!PRIVATE_BINDING_ERROR!>someFunction<!>(): String = "hello"
}
